@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ebremer</groupId>
     <artifactId>BeakGraph</artifactId>
-    <version>0.2.0</version>
+    <version>0.3.0</version>
     <packaging>jar</packaging>
     <build>
         <plugins>
@@ -13,9 +13,12 @@
                 <version>3.11.0</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.5.0</version>
             </plugin>
         </plugins>
     </build>
@@ -26,8 +29,7 @@
         <exec.mainClass>com.ebremer.beakgraph.BeakGraph</exec.mainClass>
         <jena.version>4.8.0</jena.version>
         <arrow.version>12.0.0</arrow.version>
-        <zip4j.version>2.11.5</zip4j.version>
-        <rocrate4j.version>0.2.0</rocrate4j.version>
+        <rocrate4j.version>0.3.0</rocrate4j.version>
     </properties>
     <dependencies>
         <dependency>
@@ -83,13 +85,11 @@
             <artifactId>arrow-format</artifactId>
             <version>${arrow.version}</version>
         </dependency>
-        <!--
         <dependency>
-            <groupId>net.lingala.zip4j</groupId>
-            <artifactId>zip4j</artifactId>
-            <version>${zip4j.version}</version>
-            <type>jar</type>
-        </dependency>-->
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-compression</artifactId>
+            <version>${arrow.version}</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
